# python-project-template

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
