[project]
name = "rcpsp"
version = "0.1.0"
description = "Code and results for variants of the resource-constrained project scheduling problem."
authors = [
    {name = "Leon Lan", email = "leon.lanyidong@gmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "ortools>=9.11.4210",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.2",
    "pytest>=7.2.1"
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E", "F", "I", "NPY", "PYI", "Q", "RET", "RSE", "RUF", "SLF", "SIM", "TCH"
]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
